--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.postgresql-42.5.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.restapi.classpath}
+    ${libs.restapi.classpath}:\
+    ${libs.jaxws21.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
