--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -111,7 +111,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=M3AcademiadeBaile
-main.class=m3academiadebaile.M3AcademiadeBaile
+main.class=Main.Iniciar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
